docs/project-management/versions/v2.0.0-beta/guide.md
# راهنمای مدیریت پروژه - نسخه 2.0.0-beta

> **نسخه:** 2.0 | **تاریخ انتشار:** آبان ۱۴۰۴

!!! success "نسخه جاری"
    شما در حال مشاهده **نسخه 2.0.0-beta (آخرین نسخه)** هستید. [📗 مشاهده نسخه 1.0.0](../v1.0.0/guide.md)

این سند راهنمای کامل مدیریت پروژه‌های PMO را ارائه می‌دهد.

## مقدمه

مدیریت پروژه یک فرآیند سیستماتیک برای برنامه‌ریزی، سازماندهی و کنترل منابع است.

## اهداف

- 📋 برنامه‌ریزی دقیق پروژه‌ها
- 👥 مدیریت تیم‌های پروژه
- 💰 کنترل بودجه و هزینه‌ها
- ⏱️ مدیریت زمان‌بندی

## فرآیندهای اصلی

### 1. شروع پروژه (Initiation)

در این مرحله:

- اهداف پروژه مشخص می‌شود
- ذینفعان شناسایی می‌شوند
- منشور پروژه تهیه می‌شود

### 2. برنامه‌ریزی (Planning)

برنامه‌ریزی شامل موارد زیر است:

- **تعریف محدوده (Scope)**
  - WBS (Work Breakdown Structure)
  - تعریف فعالیت‌ها
  - تخمین منابع

- **زمان‌بندی**
  - نمودار گانت
  - مسیر بحرانی (Critical Path)
  - تخصیص منابع

- **بودجه‌بندی**
  - تخمین هزینه‌ها
  - تخصیص بودجه
  - کنترل هزینه

### 3. اجرا (Execution)

مراحل اجرا:

1. تشکیل تیم پروژه
2. برگزاری جلسات کیک‌آف
3. انجام فعالیت‌های برنامه‌ریزی شده
4. تضمین کیفیت

### 4. پایش و کنترل (Monitoring)

ابزارهای پایش:

- گزارش‌های پیشرفت
- شاخص‌های کلیدی عملکرد (KPI)
- مدیریت ریسک
- مدیریت تغییرات

### 5. بسته‌شدن (Closure)

فعالیت‌های پایانی:

- تحویل نهایی
- مستندسازی
- ارزیابی عملکرد
- دروس آموخته

## جداول نمونه

| مرحله | مدت زمان | مسئول |
|-------|---------|-------|
| شروع | ۱ هفته | مدیر پروژه |
| برنامه‌ریزی | ۲ هفته | تیم برنامه‌ریزی |
| اجرا | ۸ هفته | تیم اجرایی |
| پایش | مداوم | PMO |
| بسته‌شدن | ۱ هفته | مدیر پروژه |

## نکات مهم

!!! warning "توجه"
    همیشه قبل از شروع پروژه، منشور پروژه را تهیه و تأیید کنید.

!!! tip "نکته"
    از ابزارهای مدیریت پروژه مانند Jira یا MS Project استفاده کنید.

!!! info "اطلاعات"
    این سند مطابق با استانداردهای PMBOK است.

## کد نمونه

برای محاسبه مسیر بحرانی:

```python
def calculate_critical_path(tasks):
    """محاسبه مسیر بحرانی پروژه"""
    critical_path = []
    for task in tasks:
        if task.float_time == 0:
            critical_path.append(task)
    return critical_path
```

## نتیجه‌گیری

مدیریت موفق پروژه نیازمند توجه به تمام جنبه‌های ذکر شده است. با استفاده از این راهنما می‌توانید پروژه‌های خود را به بهترین نحو مدیریت کنید.

---

[🏠 بازگشت به انتخاب نسخه](../../index.md) | [📗 مشاهده نسخه 1.0.0](../v1.0.0/guide.md)
